Fixed overlap help menu issue.

--- a/src/client/app/flogo/components/navbar.component.less
+++ b/src/client/app/flogo/components/navbar.component.less
@@ -12,7 +12,7 @@
   padding: 0 16px;
   //box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
   position: relative;
-  z-index: 1;
+  z-index: 3;
 }
 
 .flogo-header {
